Signing view fixes

--- a/MoppApp/MoppApp/TokenFlow.storyboard
+++ b/MoppApp/MoppApp/TokenFlow.storyboard
@@ -376,6 +376,7 @@
                     </view>
                     <size key="freeformSize" width="375" height="410"/>
                     <connections>
+                        <outlet property="actionButtonsStackView" destination="95R-Su-8D4" id="qc0-8E-d9o"/>
                         <outlet property="cancelButton" destination="YH8-us-1Zw" id="dUX-7z-aug"/>
                         <outlet property="idCodeLabel" destination="W3G-Hw-MUO" id="vpe-l3-h5s"/>
                         <outlet property="idCodeTextField" destination="BDG-gM-UKf" id="Pov-KZ-2eY"/>
@@ -384,6 +385,7 @@
                         <outlet property="phoneNumberErrorLabel" destination="d36-rR-XNQ" id="Xp0-L0-oc4"/>
                         <outlet property="phoneTextField" destination="ZxA-C9-eha" id="dF2-LI-ZVy"/>
                         <outlet property="rememberLabel" destination="lF6-VQ-sny" id="22U-rp-HEh"/>
+                        <outlet property="rememberStackView" destination="2SI-uc-qHu" id="tSP-kf-t6h"/>
                         <outlet property="rememberSwitch" destination="MHH-mX-gAV" id="TwB-5O-8Nb"/>
                         <outlet property="scrollView" destination="63E-uG-Wsv" id="3Y6-Mj-kw2"/>
                         <outlet property="signButton" destination="VCU-Z4-5rv" id="fyU-nP-BJ2"/>
@@ -875,6 +877,7 @@
                     </view>
                     <size key="freeformSize" width="343" height="410"/>
                     <connections>
+                        <outlet property="actionButtonsStackView" destination="7Gf-b9-BOl" id="oMe-FL-eyW"/>
                         <outlet property="cancelButton" destination="zrW-Cm-87h" id="PtG-dO-Ibq"/>
                         <outlet property="countryLabel" destination="ijX-Ze-I9g" id="QVE-lF-Ewv"/>
                         <outlet property="countryTextField" destination="c1f-rs-lZr" id="hge-5a-GxC"/>
@@ -882,6 +885,7 @@
                         <outlet property="idCodeTextField" destination="Rxc-7T-6sI" id="oOF-ms-Y4Q"/>
                         <outlet property="personalCodeErrorLabel" destination="box-bm-6ia" id="k0E-IG-8XI"/>
                         <outlet property="rememberLabel" destination="UZY-ex-JFh" id="KGs-Zg-JMT"/>
+                        <outlet property="rememberStackView" destination="fCo-6o-vIX" id="ZCX-Q7-ks9"/>
                         <outlet property="rememberSwitch" destination="7QK-Af-BRR" id="3yA-o9-U6q"/>
                         <outlet property="scrollView" destination="fkS-Sg-9NE" id="UvS-CC-gKR"/>
                         <outlet property="signButton" destination="ceO-Kb-wTg" id="haV-R7-Dig"/>
