Added Voice Control support for settings

--- a/MoppApp/MoppApp/Accessibility.storyboard
+++ b/MoppApp/MoppApp/Accessibility.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,17 +20,17 @@
             <objects>
                 <viewController storyboardIdentifier="AccessibilityViewController" id="Y6W-OH-hqX" customClass="AccessibilityViewController" customModule="MoppApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n97-rK-R9x">
-                                <rect key="frame" x="0.0" y="84" width="600" height="551"/>
+                                <rect key="frame" x="0.0" y="143" width="393" height="710"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyB-vq-rWY" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="531"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="698.33333333333337"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jMg-Qh-WOG">
-                                                <rect key="frame" x="8" y="10" width="584" height="479"/>
+                                                <rect key="frame" x="8" y="10" width="377" height="646.33333333333337"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <string key="text">RIA DigiDoc is designed to comply with the WCAG 2.1 AA accessibility guidelines. This means that the RIA DigiDoc application has been developed using the principles that the application should be usable by the blind and people with visual, mobility, and strength impairments.
 Accessibility can be improved by using built-in assistive tools on your smart device. You can find an overview of the main assistive tools below.
@@ -78,7 +80,7 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                                 <viewLayoutGuide key="frameLayoutGuide" id="UPd-Wk-ykd"/>
                             </scrollView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accessibility" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="bBp-20-pae" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                                <rect key="frame" x="78" y="0.0" width="446" height="76"/>
+                                <rect key="frame" x="78" y="59" width="239" height="76"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                                 </accessibility>
@@ -87,7 +89,7 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ivr-aG-jmF">
-                                <rect key="frame" x="532" y="13" width="48" height="48"/>
+                                <rect key="frame" x="325" y="72" width="48" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="48" id="G8b-31-NYm"/>
                                     <constraint firstAttribute="height" constant="48" id="e8X-vO-XOv"/>
@@ -115,6 +117,7 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="closeButton" destination="ivr-aG-jmF" id="TmX-mb-QWN"/>
                         <outlet property="textView" destination="jMg-Qh-WOG" id="oMR-wg-2vh"/>
                         <outlet property="titleLabel" destination="bBp-20-pae" id="eep-xd-Zen"/>
                     </connections>
