--- a/MoppApp/MoppApp/RecentContainersElements.xib
+++ b/MoppApp/MoppApp/RecentContainersElements.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,20 +22,20 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YC1-OL-BjW" customClass="SearchTextField" customModule="MoppApp" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
+                <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="YC1-OL-BjW" customClass="SearchTextField" customModule="MoppApp" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="20" width="375" height="28"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent containers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yr2-Tq-KJ0" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                    <rect key="frame" x="8" y="0.0" width="311" height="48"/>
+                    <rect key="frame" x="56" y="20" width="263" height="28"/>
                     <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="21"/>
                     <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Fx-J3-DpC">
-                    <rect key="frame" x="327" y="8" width="32" height="32"/>
+                    <rect key="frame" x="313" y="18" width="32" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="9Fx-J3-DpC" secondAttribute="height" multiplier="1:1" id="2Ca-N8-aup"/>
                         <constraint firstAttribute="width" constant="32" id="flP-zC-d12"/>
@@ -50,13 +50,13 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="yr2-Tq-KJ0" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="5OY-Zo-39y"/>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerX" secondItem="zkY-Ou-pn7" secondAttribute="centerX" constant="-24" id="6bp-G2-OoW"/>
+                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerX" secondItem="zkY-Ou-pn7" secondAttribute="centerX" id="6bp-G2-OoW"/>
                 <constraint firstItem="zkY-Ou-pn7" firstAttribute="trailing" secondItem="YC1-OL-BjW" secondAttribute="trailing" id="9Hb-WD-2AF"/>
                 <constraint firstItem="yr2-Tq-KJ0" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="D5d-Yq-1IK"/>
                 <constraint firstItem="YC1-OL-BjW" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" id="Gor-K3-uzx"/>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" constant="8" id="Hsm-Fj-Dt7"/>
+                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" constant="56" id="Hsm-Fj-Dt7"/>
                 <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="yr2-Tq-KJ0" secondAttribute="bottom" id="N2J-8E-miH"/>
-                <constraint firstItem="9Fx-J3-DpC" firstAttribute="leading" secondItem="yr2-Tq-KJ0" secondAttribute="trailing" constant="8" id="T2D-6F-EzT"/>
+                <constraint firstItem="9Fx-J3-DpC" firstAttribute="leading" secondItem="yr2-Tq-KJ0" secondAttribute="trailing" constant="-6" id="T2D-6F-EzT"/>
                 <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerY" secondItem="zkY-Ou-pn7" secondAttribute="centerY" id="aqY-rT-95h"/>
                 <constraint firstItem="YC1-OL-BjW" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="d6l-ez-9HY"/>
                 <constraint firstItem="9Fx-J3-DpC" firstAttribute="centerY" secondItem="zkY-Ou-pn7" secondAttribute="centerY" id="lPF-L4-EAk"/>
